--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -164,19 +164,6 @@ button {
   color: #afafaf;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: #ddd;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #afafaf;
-}
-
 *::-ms-clear {
   display: none;
 }
